Fix main background not showing

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -67,7 +67,7 @@
     display: flex;
     align-content: center;
     
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../../img/bg-img.jpg");
+    background-image: url("../../img/bg-img.jpg");
     background-repeat: no-repeat;
     background-size: 100% 100%;
     &__image{
