--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,7 @@
   display: flex;
   -ms-flex-line-pack: center;
       align-content: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../../img/bg-img.jpg");
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/bg-img.jpg");
+  background-image: url("../../img/bg-img.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
